added swagger docs to endpoints
